CSS/Forside.css
 body{
    margin: 0;
    font-family: Arial, sans-serif;
    }

    html {
    background: radial-gradient(circle, #E63946, #090909);
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    background-color: #090909;
    overflow-x: hidden;
  }

 * {
    box-sizing: border-box;  
}

.SvartKonteiner {                 
    top: 0;
    left: 0;
    border: 2px solid  rgb(16, 16, 16);
    padding: 20px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    background-color: rgb(16, 16, 16);
    position: fixed;
    z-index: 9999;
    }
    
.SvartKonteiner a{
    color: #ffffff;
    text-decoration: none;
    font-weight: bold;
    padding: 10px 20px;
    border: 2px solid transparent;
    transition: all 0.3s ease;
    border-radius: 5px;
    font-size: 1.5vw;
    }

    
    
.SvartKonteiner a:hover {
    border-color: #fff;
    background-color: rgba(255, 255, 255, 0.2);
    }
    
#Logo{
    color: #E63946;
    font-family:'Courier New', Courier, monospace;
    font-size: 2vw;
    
    }

    .Hamburger {
        display: none;       /* skjules på PC */
        font-size: 6vw;
        background: none;
        border: none;
        color: rgb(249, 247, 247);
        cursor: pointer;  
    }

    .NavMeny {
        display: flex;
        gap: 110px;
    }

    .DropdownMeny {
        display: none;                     /* skjult som start */
        flex-direction: column;
        background-color:grey;
        border-top: 2px solid #300000;
        width: 30vw;
        padding: 2vw 0;
        top: 100%;
        right: 4vw;
        position: absolute;
        align-items: center;
        }

    .DropdownMeny a {
        color: rgb(245, 243, 243);
        padding: 12px 20px;
        text-decoration: none;
        font-weight: bold;
        font-size: 3vw; 
        }

    .DropdownMeny a:hover {
        background-color: rgba(255, 255, 255, 0.2);
        }

    .logoBilde img{
        width: 30%;
        height: auto;
        aspect-ratio: 3 / 3;
        object-fit: cover;
        display: block;
        border-radius: 0;
        margin: 11% 35%;
        border-radius: 10%;
        }

    .rad1{
        position: relative;
        border: 1px solid rgb(15, 14, 14);
        width: 70vw;
        aspect-ratio: 16 / 10;
        margin-top: 11%;
        margin-left: 15vw;
        margin-right: 15vw;
        margin-bottom: 0;
        overflow: hidden;
    }
    .rad1::after {
        content: "";
        display: table;
        clear: both;
    }
    .kolonne1{
        position: relative;
        width: 100%;
        height: 100%;
    }

    .kolonne1 video{
        position: absolute;
        top: 0;
        left: 0;
        width: 101%;
        height: 101%;
        object-fit: cover;
        display: block;
    }

.gjennomsiktigBorder{
    position: absolute;
    text-align: center;
    background: rgba(255, 255, 255, 0.7);
    width:40vw;
    height: 30vh;
    padding:7vw;
    box-shadow:0 0 10px rgba(0, 0, 0, 0.1);
    border-radius:0.5;
    top: 55%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.kolonne2 img{
    width: 100%;
    height: auto;
    aspect-ratio: 3 / 3;
    object-fit: cover;
    display: block;
    border-radius: 0;
  
}

.kolonne2{
  position: relative;
}

.rad2::after {
    content: "";
    display: table;
    clear: both;
}

.rad2{
    border: 2px solid rgb(15, 14, 14);
    width: 40%;
    margin: 15% 5%;  
    border-radius: 0; 
}

 .omTekstBox{
    position: absolute;
    text-align: center;
    background: rgba(255, 255, 255, 0.7);
    width:45vw;
    padding:3vw;
    box-shadow:0 0 10px rgba(0, 0, 0, 0.1);
    border-radius:0.5%;
    top: 50%;
    left: 170%;
    transform: translate(-50%, -50%);
}

.storOverskrift{
   font-size: 2 vw; 
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: -40px auto;
   font-weight: bold;
}

.Overskrift{
   font-size: 2vw; 
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: auto;
   font-weight: bold;
}

.Tekst{
    font-size: 1.5vw; 
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 15px auto;
}

.btnBooking{
    background-color: rgb(124, 123, 128);
    margin: 3vw auto 0;
    font-size: 2vw;
    border-radius: 15px;
    border: 1px solid black;
    padding: 10px;
    -webkit-appearance: none;
    appearance: none;
    transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
    }

.btnOm{
    background-color: rgb(126, 125, 134);
    margin: 1vw auto 0;
    font-size: 1.5vw;
    border-radius: 15px;
    border: 1px solid black;
    padding: 10px;
    -webkit-appearance: none;
    appearance: none;
    transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
}

.btnBooking:hover,
.btnOm:hover{
    transform: translateY(-3px);
    background-color: #E63946;
    box-shadow: 0 20px 20px rgba(0,0,0,0.25);   

}

.footerSection{
   display: flex; 
   justify-content: center; 
}
footer h3{
    font-size: 2vw;
    color: #E63946;
    display: flex; 
    margin: 0;
}
ul{
    padding: 10%;
    margin: 0%;
}

a {
    text-decoration: none;
    color: white;
}
p{
    margin: 0;
}

 .FooterLi{
   font-size: 1.5vw;
    display: flex;
    margin-top: 5vh;
    justify-content: center;
    color: white;
    white-space: nowrap;
}

.footerSection .FooterLi a img.instagram{
    width: 3.5rem;
    display: block;
    object-fit: contain;  
}


.footerSection .FooterLi a img.facebook{
    width: 2rem;
    display: block;
    object-fit: contain; 
   margin-right: 0.5rem;
   margin-left: 0.4rem; 
}



.footerSection .FooterLi a{
    display: flex;          /* gjør at ting legger seg på rad */
    align-items: center;    /* sentrer vertikalt */
   
}


    /*kode under til tlf*/


    

    
@media (max-width: 1000px) {
     body{
      background: radial-gradient(circle, #E63946, #090909);
      background: transparent;

  }

  html {
    background: radial-gradient(circle, #E63946, #090909);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    background-color: #090909;
  }

  * {
      box-sizing: border-box;  
  }
  
/* Vis hamburger */
.Hamburger {
  display: block;
}

/* Skjul vanlige menylenker i navbar */
.NavMeny {
  display: none;
}

/* Når container har "open", vis dropdown-boksen */
.SvartKonteiner.open .DropdownMeny {
  display: flex;
}

#Logo{
  font-size: 7vw;
}

.DropdownMeny{
  width: 10vw;
}

.DropdownMeny a{
  font-size: 6vw;
}

.DropdownMeny {
  display: none;                     /* skjult som start */
  flex-direction: column;
  background-color:grey;
  border-top: 2px solid #300000;
  width: 30vw;
  padding: 2vw 0;
  top: 100%;
  right: 4vw;
  position: absolute;
  align-items: center;
  }

.DropdownMeny a {
  color: rgb(245, 243, 243);
  padding: 12px 20px;
  text-decoration: none;
  font-weight: bold;
  font-size: 3vw; 
  }

.DropdownMeny a:hover {
background-color: rgba(255, 255, 255, 0.2);
}

.logoBilde{
    width: 210px;
    margin: 30% auto 0;
}

.logoBilde img{
    width: 100%;
    margin: 0;
}


.kolonne1 video{
width: 101%;
height: 101%;
aspect-ratio: 3 / 3;
object-fit: cover;
display: block;

}

.kolonne1{
position: relative;
width: 100%;
}

.rad1::after {
content: "";
display: table;
clear: both;
}

.rad1{
border: 1px solid rgb(15, 14, 14);
width: 90%;
margin: 30% auto 0;  
aspect-ratio: 3 / 3; 
overflow: hidden;
}

.gjennomsiktigBorder{
position: absolute;
text-align: center;
background: rgba(255, 255, 255, 0.7);
width:65vw;
padding:10vw;
box-shadow:0 0 10px rgba(0, 0, 0, 0.1);
top: 63%;
left: 50%;
transform: translate(-50%, -50%);
}

.rad2{
    border: 2px solid rgb(15, 14, 14);
    width: 90%;
    margin: 40vw auto 0;
    border-radius: 0;
  }
  
  .kolonne2{
    position: relative;
    display: flex;
    flex-direction: column;
  }

  .kolonne2 img{
    border-radius: 0;
  }

  
  .omTekstBox{
    position: static;
    text-align: center;
    background: rgba(255, 255, 255, 0.7);
    width: 100%;
    padding: 5vw;
    transform: none;
    box-sizing: border-box;
    border-radius: 0;
  }

.storOverskrift{
font-size: 4.5vw; 
font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
margin: auto;
font-weight: bold;
}

.Overskrift{
font-size: 4vw; 
font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
margin: auto;
font-weight: bold;
}

.Tekst{
font-size: 3vw; 
font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
margin: 15px auto;
}

.btnBooking{
background-color: rgb(124, 123, 128);
margin: 4vw auto 0;
font-size: 4vw;
border-radius: 15px;
border: 1px solid rgb(16, 16, 16);
color: rgb(16, 16, 16);
padding: 10px;
-webkit-appearance: none;
appearance: none;
transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;

}

.btnOm{
background-color: rgb(126, 125, 134);
color: rgb(16, 16, 16);
border: 1px solid rgb(16, 16, 16);
margin: 1vw auto 0;
font-size: 3.5vw;
border-radius: 15px;
padding: 10px;
-webkit-appearance: none;
appearance: none;
transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
}

.btnBooking:hover,
.btnOm:hover{
transform: translateY(-3px);
background-color: #E63946;
box-shadow: 0 20px 20px rgba(0,0,0,0.25);

}

.footerSection{
display: flex; 
justify-content: center; 
margin-top: 40%;
}
footer h3{
font-size: 3.5vw;
color: #E63946;
display: flex; 
margin: 0;
}
ul{
padding: 4%;
}

.Meny a{
margin-top: 35%;
padding: 3%;
}
.Kontakt p {
    margin-top: 11%;
}

a {
text-decoration: none;
color: white;
}
p{
margin: 0;
}

.FooterLi{
font-size: 3vw;
display: flex;
margin-top: 5vh;
justify-content: center;
color: white;
white-space: nowrap;
}

.footerSection .FooterLi a img.instagram{
width: 3.4rem;
display: block;
object-fit: contain;  
}


.footerSection .FooterLi a img.facebook{
width: 2rem;
display: block;
object-fit: contain; 
margin-right: 0.5rem;
margin-left: 0.4rem; 
}

.footerSection .FooterLi a{
display: flex;          /* gjør at ting legger seg på rad */
align-items: center;    /* sentrer vertikalt */

}
}

 


     
    

      

       

